--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="American Safeguard Services provides Security Guard Services in Houston. The company "
+      content="American Safeguard Services provides Security Guard Services in Houston."
     />
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
