--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>American Safeguard Alliance LLC, Security Guard Company Houston Texas, Armed Guard Service, Personal Protection Officer, Patrol Services</title>
+    <title>American Safeguard Alliance</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
